--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1",
-        "satooshi/php-coveralls": "dev-master"
+        "satooshi/php-coveralls": "dev-master",
+		"laracasts/generators": "^1.1"
     },
 	"autoload": {
 		"classmap": [
