--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
 		"graham-campbell/htmlmin": "^3.0",
 		"spatie/searchindex": "^2.0",
 		"roumen/feed": "^2.9",
-		"zencoder/zencoder-php": "~2.2.0",
-		"laravel/homestead": "^2.1"
+		"zencoder/zencoder-php": "~2.2.0"
 	},
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -29,7 +28,8 @@
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1",
         "satooshi/php-coveralls": "dev-master",
-		"laracasts/generators": "^1.1"
+		"laracasts/generators": "^1.1",
+		"laravel/homestead": "^2.1"
     },
 	"autoload": {
 		"classmap": [
