--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,10 @@
 	},
 	"type": "project",
 	"license": "MIT",
+	"repositories": [{
+		"type": "vcs",
+		"url": "/Users/bdo9/Code/forestall"
+	}],
 	"require": {
 		"php": ">=5.5.9",
 		"laravel/framework": "5.1.*",
@@ -19,7 +23,8 @@
 	  	"graham-campbell/parse": "~2.0",
 		"graham-campbell/htmlmin": "^3.0",
 		"roumen/feed": "^2.9",
-		"zencoder/zencoder-php": "~2.2.0"
+		"zencoder/zencoder-php": "~2.2.0",
+		"substrike/forestall": "^0.1.0"
 	},
     "require-dev": {
         "fzaninotto/faker": "~1.4",
