--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
     "laravel-elixir": "*",
     "vinyl-fs": "^1.0.0"
   },
+  "dependencies": {
+    "bootstrap": "^3.0.0",
+    "jquery": "^2.1.4",
+    "lazysizes": "^1.3.1",
+    "medium-editor": "^5.10.0"
+  },
   "private": true
 }
