--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "del": "^1.1.1",
     "gulp": "^3.8.8",
     "laravel-elixir": "*",
+    "laravel-elixir-stylus": "^1.0.1",
     "vinyl-fs": "^1.0.0"
   },
   "dependencies": {
