--- a/composer.json
+++ b/composer.json
@@ -1,93 +1,96 @@
 {
-	"name": "compasshb/compasshb.com",
-	"description": "Compass HB is Compass Bible Church in Huntington Beach, California ...and the gospel rings out!",
-	"support": {
-		"issues": "https://github.com/CompassHB/compasshb.com/issues"
-	},
-	"type": "project",
-	"license": "MIT",
-	"require": {
-		"php": ">=7.0",
-		"laravel/framework": "5.1.*",
-		"illuminate/html": "5.*",
-		"bugsnag/bugsnag-laravel": "1.*",
-		"vimeo/vimeo-api": "1.*",
-		"guzzlehttp/guzzle": "6.*",
-		"guzzlehttp/oauth-subscriber": "~0.3.0",
-		"league/flysystem-aws-s3-v3": "~1.0",
-	  "graham-campbell/parse": "~2.0",
-		"graham-campbell/htmlmin": "^3.0",
-		"roumen/feed": "^2.9",
-		"zencoder/zencoder-php": "~2.2",
-		"substrike/forestall": "^0.1.0",
-		"squizlabs/php_codesniffer": "^2.4",
-		"google/apiclient": "^1.1"
-	},
+  "name": "compasshb/compasshb.com",
+  "description": "Compass HB is Compass Bible Church in Huntington Beach, California ...and the gospel rings out!",
+  "support": {
+    "issues": "https://github.com/CompassHB/compasshb.com/issues"
+  },
+  "type": "project",
+  "license": "MIT",
+  "require": {
+    "php": ">=7.0",
+    "laravel/framework": "5.1.*",
+    "illuminate/html": "5.*",
+    "bugsnag/bugsnag-laravel": "1.*",
+    "vimeo/vimeo-api": "1.*",
+    "guzzlehttp/guzzle": "6.*",
+    "guzzlehttp/oauth-subscriber": "~0.3.0",
+    "league/flysystem-aws-s3-v3": "~1.0",
+    "graham-campbell/parse": "~2.0",
+    "graham-campbell/htmlmin": "^3.0",
+    "roumen/feed": "^2.9",
+    "zencoder/zencoder-php": "~2.2",
+    "substrike/forestall": "^0.1.0",
+    "squizlabs/php_codesniffer": "^2.4",
+    "google/apiclient": "^1.1",
+    "barryvdh/laravel-ide-helper": "^2.1"
+  },
   "require-dev": {
-		"fzaninotto/faker": "~1.4",
+    "fzaninotto/faker": "~1.4",
     "mockery/mockery": "0.9.*",
     "phpunit/phpunit": "~4.0",
     "phpspec/phpspec": "~2.1",
     "satooshi/php-coveralls": "dev-master",
     "laracasts/generators": "^1.1",
     "laravel/homestead": "^2.1",
-		"laraveldaily/quickadmin": "^0.2.10"
+    "laraveldaily/quickadmin": "^0.2.10"
   },
 	"autoload": {
-		"classmap": [
-			"database"
-		],
-		"psr-4": {
-			"CompassHB\\Www\\": "app/"
-		},
-		"files": ["app/Helpers.php"]
+      "classmap": [
+        "database"
+      ],
+      "psr-4": {
+        "CompassHB\\Www\\": "app/"
+      },
+      "files": ["app/Helpers.php"]
 	},
     "autoload-dev": {
       "classmap": [
         "tests/TestCase.php"
       ]
   },
-   "scripts": {
-      "post-install-cmd": [
-          "php artisan clear-compiled",
-          "php artisan optimize"
-      ],
-      "pre-update-cmd": [
-          "php artisan clear-compiled"
-      ],
-      "post-update-cmd": [
-          "php artisan optimize"
-      ],
-      "post-root-package-install": [
-          "php -r \"copy('.env.example', '.env');\""
-      ],
-      "post-create-project-cmd": [
-          "php artisan key:generate"
-      ],
-      "pull": [
-          "git pull upstream master",
-          "php artisan migrate:refresh --seed",
-          "composer test"
-      ],
-      "test": ["phpunit"],
-			"cloud9:install": [
-				"sudo composer self-update",
-				"composer install",
-				"cp .env.cloud9 .env",
-				"sudo apt-get update",
-				"sudo apt-get install php5-curl -y",
-				"mysql-ctl start",
-				"sudo apachectl restart",
-				"npm install gulp",
-				"npm install laravel-elixir",
-				"bower install",
-				"gulp",
-				"php artisan migrate:install",
-				"php artisan migrate:refresh --seed"
-			],
-			"db:reset": "php artisan migrate:refresh --seed"
-	  },
-		"config": {
-			"preferred-install": "dist"
-		}
+  "scripts": {
+    "post-install-cmd": [
+      "php artisan clear-compiled",
+      "php artisan optimize"
+    ],
+    "pre-update-cmd": [
+      "php artisan clear-compiled"
+    ],
+    "post-update-cmd": [
+      "php artisan clear-compiled",
+      "php artisan ide-helper:generate",
+      "php artisan optimize"
+    ],
+    "post-root-package-install": [
+      "php -r \"copy('.env.example', '.env');\""
+    ],
+    "post-create-project-cmd": [
+      "php artisan key:generate"
+    ],
+    "pull": [
+      "git pull upstream master",
+      "php artisan migrate:refresh --seed",
+      "composer test"
+    ],
+    "test": ["phpunit"],
+    "cloud9:install": [
+      "sudo composer self-update",
+      "composer install",
+      "cp .env.cloud9 .env",
+      "sudo apt-get update",
+      "sudo apt-get install php5-curl -y",
+      "mysql-ctl start",
+      "sudo apachectl restart",
+      "npm install gulp",
+      "npm install laravel-elixir",
+      "bower install",
+      "gulp",
+      "php artisan migrate:install",
+      "php artisan migrate:refresh --seed"
+    ],
+    "db:reset": "php artisan migrate:refresh --seed"
+   },
+  "config": {
+    "preferred-install": "dist"
+  }
 }
