--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
-    "mockery/mockery": "0.9.*",
+    "mockery/mockery": "^0.9.4",
     "phpunit/phpunit": "~5.0",
     "phpspec/phpspec": "~2.1",
     "satooshi/php-coveralls": "dev-master",
